manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: campingtraining/camping-docs:sha-0caab10
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
