manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-service
spec:
  selector:
    app: docs
  ports:
  - port: 80
    targetPort: 80
